[gd_scene load_steps=10 format=2]

[ext_resource path="res://Spells/LichBlast.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Hitbox.gd" type="Script" id=15]
[ext_resource path="res://SoundEffects/MagicSounds/MagicShort2.mp3" type="AudioStream" id=16]
[ext_resource path="res://Spells/LichBlast.gd" type="Script" id=17]

[sub_resource type="CircleShape2D" id=2]
radius = 12.0

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.0272727 ), -2.71678, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 1
emission_sphere_radius = 7.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 15.0
scale = 3.0
scale_curve = SubResource( 3 )
color = Color( 0.533333, 0.227451, 0.772549, 1 )

[sub_resource type="CircleShape2D" id=6]
radius = 18.0278

[node name="LichBlast" type="Node2D"]
script = ExtResource( 17 )
__meta__ = {
"_edit_lock_": true
}

[node name="ArcaneBubble" type="AnimatedSprite" parent="."]
position = Vector2( 0, 2 )
frames = ExtResource( 1 )
animation = "Bubble"

[node name="Hitbox" type="Area2D" parent="."]
script = ExtResource( 15 )
__meta__ = {
"_edit_lock_": true
}
damage = 3
is_player_attack = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 2 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="Particles2D" type="Particles2D" parent="."]
amount = 16
lifetime = 0.5
visibility_rect = Rect2( -1000, -1000, 2000, 2000 )
local_coords = false
process_material = SubResource( 5 )

[node name="DespawnBox" type="Area2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="DespawnBox"]
shape = SubResource( 6 )

[node name="Despawn" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Pop" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 16 )
pitch_scale = 2.76

[node name="StartTime" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[connection signal="body_entered" from="DespawnBox" to="." method="_on_DespawnBox_body_entered"]
[connection signal="timeout" from="Despawn" to="." method="_on_Despawn_timeout"]
[connection signal="timeout" from="StartTime" to="." method="_on_StartTime_timeout"]
